compiler/pl0/project/tests/error/1.pl0
FOR;
ELSE;
STEP;
UNTIL;
DO;
RETURN;
